@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Totem</title>
 	<link rel="stylesheet" type="text/css" href="http://www.gnome.org/default.css" />
@@ -10,7 +10,7 @@
 
 <body>
 <div id="hdr">
-	<a href="http://www.gnome.org/"><img id="logo" src="http://gnome.org/img/logo/text-64" alt="Gnome" /></a>
+	<a href="http://www.gnome.org/"><img id="logo" src="http://gnome.org/img/logo/text-64" alt="GNOME" /></a>
 	<div id="hdrNav">
   	<a href="index.html"><b>Home</b></a> &middot;
   	<a href="#download">Download</a> &middot;
@@ -44,13 +44,13 @@ It comes with added functionality such as:</p>
 If this isn't the case, you can install it by using a online repository
 (if available for your distribution). You can choose between <tt>totem-gstreamer</tt> and <tt>totem-xine</tt>.</p>
 
-<p>For deb-based distributions (like <a href="http://www.debian.org/">Debian</a>, <a href="http://www.ubuntu.com">Ubuntu</a>, ...) this is:</p>
+<p>For deb-based distributions (like <a href="http://www.debian.org/">Debian</a>, <a href="http://www.ubuntu.com">Ubuntu</a>, &hellip;) this is:</p>
 <div class="command">$ sudo apt-get install totem-gstreamer</div>
 
-<p>For yum-based distributions (like <a href="http://fedoraproject.org/">Fedora Core</a>, ...) this is:</p>
+<p>For yum-based distributions (like <a href="http://fedoraproject.org/">Fedora Core</a>, &hellip;) this is:</p>
 <div class="command">$ sudo yum install totem</div>
 
-<p>For portage-based distributions (like <a href="http://www.gentoo.org/">gentoo linux</a>, ...) this is:</p>
+<p>For portage-based distributions (like <a href="http://www.gentoo.org/">gentoo linux</a>, &hellip;) this is:</p>
 <div class="command">$ sudo emerge totem</div>
 <p>Use the <tt>-xine</tt> USE flag to install the GStreamer version.</p>
 
@@ -71,40 +71,40 @@ that is related to yours, or you can compile totem from source (see <a href="#in
 <a name="installingfromsource"></a>
 <h2>Installing from source</h2>
 <p>You can also compile totem for source. The latest sourcecode of totem can be
-found at the <a href="http://ftp.gnome.org/pub/GNOME/sources/totem">GNOME ftp site</a>.
+found at the <a href="http://ftp.gnome.org/pub/GNOME/sources/totem">GNOME ftp site</a>.</p>
 
-<h2>Installing from CVS</h2>
+<h2>Installing from SVN</h2>
 <p>
-If you want to play with the latest bleeding-edge features, you can try a CVS copy.
-Note that CVS versions can be unstable! Check out the <a href="http://developer.gnome.org/tools/cvs.html">documentation</a> on how to do this. The module you have to check out is <tt>totem</tt>.
+If you want to play with the latest bleeding-edge features, you can try an SVN copy.
+Note that SVN versions can be unstable! Check out the <a href="http://developer.gnome.org/tools/svn.html">documentation</a> on how to do this. The module you have to check out is <tt>totem</tt>.
 </p>
 
 
-<h1>What are the minimum requirements</h1>
+<h1>What are the minimum requirements?</h1>
 <ul>
-  <li><a href="http://www.gnome.org/">Gnome</a> 2.10</li>
-  <li><a href="http://gstreamer.freedesktop.org/">GStreamer</a> 0.8.8 (with GStreamer-plugins 0.8.7) or <a href="http://gstreamer.freedesktop.org/">GStreamer</a> 0.10 or <a href="http://xinehq.de/">xine-lib</a> 1.0</li>
+  <li><a href="http://www.gnome.org/">GNOME</a> 2.10</li>
+  <li><a href="http://gstreamer.freedesktop.org/">GStreamer</a> 0.10.12 (with GStreamer-plugins 0.10.12) or <a href="http://xinehq.de/">xine-lib</a> 1.1.7</li>
   <li><a href="http://www.home.unix-ag.org/simon/gromit/">Gromit</a> 20041213 for the Telestrator mode</li>
-  <li><a href="http://developers.videolan.org/libdvdcss/">libdvdcss</a> for DVD playback (<a href="http://freshrpms.net/rpm/libdvdcss">Fedora Core</a>, <a href="https://wiki.ubuntu.com/RestrictedFormats#head-cd84b8e23927ccdb4bb55ffd3074687abec0cf3b">Ubuntu</a>)</li>
+  <li><a href="http://developers.videolan.org/libdvdcss/">libdvdcss</a> for DVD playback (<a href="http://freshrpms.net/rpm/libdvdcss">Fedora Core</a>, <a href="https://help.ubuntu.com/community/RestrictedFormats/PlayingDVDs">Ubuntu</a>)</li>
 </ul>
 
 <a name="features"></a>
 <h1>Features</h1>
 <ul>
-<li>Play any <a href="http://xinehq.de/">xine</a> or <a href="http://gstreamer.freedesktop.org/">GStreamer</a> supported file (depending on the backend chosen)</li>
+<li>Play any <a href="http://xinehq.de/">xine</a>- or <a href="http://gstreamer.freedesktop.org/">GStreamer</a>-supported file (depending on the backend chosen)</li>
 <li><a href="http://www.lirc.org">LIRC</a> support</li>
 <li>Shoutcast, m3u, asx, SMIL and ra playlists support (also usable from a shipped LGPL library)</li>
 <li>DVD (with menus), VCD playback, disc-type automatically detected</li>
 <li>TV-Out configuration with optional resolution switching</li>
 <li>4.0, 4.1, 5.0, 5.1, stereo and AC3 <i>Passthrough</i> audio output</li>
 <!-- <li>Gnome-vfs input plugin with authentication dialog</li> -->
-<li>Full-screen mode (move your mouse and you get nice controls) with Xinerama, dual-head and Viewport support</li>
+<li>Fullscreen mode (move your mouse and you get nice controls) with Xinerama, dual-head and Viewport support</li>
 <li>Remote operation mode to control a running Totem</li>
 <li>Seek and Volume controls</li>
 <li>Aspect ratio changing, Scaling based on the video's original size</li>
 <li>Full keyboard control</li>
 <li>Playlist with Repeat and Shuffle modes, with saving feature and drag'n'drop reordering</li>
-<li>Gnome and Nautilus integration (Totem registers the file-types, adds a menu item, uses the proxy configuration, saves sessions, and registers pnm, mms, uvox and rtsp schemes, removes playlist items from a disc that's getting ejected)</li>
+<li>GNOME and Nautilus integration (Totem registers the file-types, adds a menu item, uses the proxy configuration, saves sessions, and registers pnm, mms, uvox and rtsp schemes, removes playlist items from a disc that's getting ejected)</li>
 <!-- <li>Nice default logo</li> //-->
 <li>Properties window (information about the current movie)</li>
 <li>Drag'n'drop and mousewheel actions</li>
@@ -133,7 +133,7 @@ Note that CVS versions can be unstable! Check out the <a href="http://developer.
 <a name="codecs"></a>
 <h1>Codecs</h1>
 <p>Totem can display a variety of formats, based on what backend you use.
-To see what backend you are using check the "About box" of totem.</p>
+To see what backend you are using check the "About" dialog of Totem.</p>
 
 <h2>GStreamer</h2>
 <p>
@@ -145,7 +145,7 @@ can be found <a href="http://gstreamer.freedesktop.org/documentation/splitup.htm
   <li><b>gst-plugins-base</b><br />the basic and essential plug-ins for GStreamer</li>   
   <li><b>gst-plugins-good</b><br />the plug-ins for most Open formats</li>  
   <li><b>gst-plugins-ugly</b><br />good-quality plug-ins that might pose distribution problems, needed for <b>DVD playback</b></li>
-  <li><b>gst-plugins-bad</b><br />a set of plug-ins that need more work</li>  
+  <li><b>gst-plugins-bad</b><br />a set of plug-ins that need more work, needed for <b>YouTube videos</b></li>  
   <li><b>gst-ffmpeg</b><br />FFmpeg-based plug-in, contains all the basic decoders for popular codecs, such as DivX and WMV</li>
   <li><b><a href="http://ronald.bitfreak.net/pitfdll.php">Pitfdll</a></b><br />Plug-ins using the Windows codec DLLs for which no free software implementation exists yet.</li>
 </ul>
@@ -163,11 +163,15 @@ xine-lib's website. That should sort most of you out.</p>
 <p>You will need gst-plugins-bad 0.10.6, as well as Fluendo's MPEG demuxer to have playback working. The channels.conf file should be named <tt>~/.gstreamer-0.10/dvb-channels.conf</tt>.</p>
 
 <h2>xine-lib</h2>
-<p>The channels.conf file should be placed in <tt>~/.xine/</tt>.
+<p>The channels.conf file should be placed in <tt>~/.xine/</tt>.</p>
 
 <h2>Generating the channels.conf</h2>
 <p><a href="http://bugzilla.gnome.org/show_bug.cgi?id=515759">Work is on-going to have a scanner interface in Totem</a>, so that the out-of-the-box experience is better, but you will have to use another application to generate the channels listing.</p>
 <p>We recommend you use <a href="http://www.edafe.org/vdr/wscan.html">w_scan</a> as it doesn't require any initial scanning data to scan for channels.</p>
+
+<a name="youtube"></a>
+<h1>YouTube support</h1>
+<p>With the YouTube plugin you can browse <a href="http://youtube.com/">YouTube</a> and watch videos from it. You'll need gstreamer-plugins-bad 0.10.6 or a recent version of xine-lib. Even if videos play correctly, seeking may not yet work for them but work is ongoing to fix this.</p>
 
 <a name="faq"></a>
 <h1>Frequently Asked Questions</h1>
@@ -183,7 +187,7 @@ A: The space bar will work in fullscreen. But when in windowed mode, for accessi
 </p>
 
 <p>
-Q: Why does the browser plugin advertise itself as handling some file/stream types it can't handle? (eg. why does it say it supports MP3 in the <tt>about:plugins</tt> when it doesn't?)<br/>
+Q: Why does the browser plugin advertise itself as handling some file/stream types it can't handle? (e.g. why does it say it supports MP3 in the <tt>about:plugins</tt> when it doesn't?)<br/>
 A: The problem is that the Mozilla/Gecko/Firefox plugin system doesn't allow for fine-grained advertising of those features.<br/>
 For example, the Totem <i>GMP</i> plugin advertises itself as a Windows Media Player compatible-plugin. There is unfortunately no way to check whether all the necessary plugins are available to the media framework to play the stream before we try. For example, the installed plugins might only be able to play back a specific version of Windows Media Video. There is no way to advertise that fact using the current plugin system. There is also no way to know what will be <i>inside </i> the stream before we start playing it back.
 </p>
@@ -199,19 +203,19 @@ bugtracker. To see what backend you are using check the "About box" of totem.</p
 
 <h2>Backend: GStreamer bug</h2>
 <p>If you are running the GStreamer backend, and you notice a problem with the
-sound or video (out of sync, garbled output,...), you can file a bug to GStreamer.
+sound or video (out of sync, garbled output, &hellip;), you can file a bug to GStreamer.
 As with all bugs, first
-<a href="http://bugzilla.gnome.org/buglist.cgi?product=GStreamer&bug_status=NEW&bug_status=REOPENED&bug_status=ASSIGNED&bug_status=UNCONFIRMED">check</a>
+<a href="http://bugzilla.gnome.org/buglist.cgi?product=GStreamer&amp;bug_status=NEW&amp;bug_status=REOPENED&amp;bug_status=ASSIGNED&amp;bug_status=UNCONFIRMED">check</a>
 if it isn't already reported. If your bug isn't in that list, <a href="http://bugzilla.gnome.org/enter_bug.cgi?product=GStreamer">file new bug</a>.
-You might want to include the output of this command to your bug report:<p/>
-<div class="command">GST_DEBUG_NO_COLOR=1 GST_DEBUG=*:2 totem 2&gt; log</div><p/>
-or if the problem seems to be with the file you're playing, include the output of:<p/>
+You might want to include the output of this command to your bug report:</p>
+<div class="command">GST_DEBUG_NO_COLOR=1 GST_DEBUG=*:2 totem 2&gt; log</div>
+<p>or if the problem seems to be with the file you're playing, include the output of:</p>
 <div class="command">gst-launch-0.10 playbin uri=&lt;location of the file&gt;</div>
 
 <h2>Backend: Xine bug</h2>
 <p>First, check if your bug also happens in xine-ui, if this is the case, it is
 likely a bug in Xine. Check
-<a href="http://xinehq.de/index.php/bugs">the bug section on the Xine homepage</a>. When a crash occurs in xine-lib itself, please recompile xine-lib with debugging information (run <tt>make debug</tt> followed by <tt>make debug-install</tt> after having run the configure script) and provide a <a href="http://bugzilla.gnome.org/getting-traces.cgi">backtrace</a>. You will also want to check the <a href="http://xinehq.de/index.php/faq">xine FAQ</a>.<p/>
+<a href="http://xinehq.de/index.php/bugs">the bug section on the Xine homepage</a>. When a crash occurs in xine-lib itself, please recompile xine-lib with debugging information (run <tt>make debug</tt> followed by <tt>make debug-install</tt> after having run the configure script) and provide a <a href="http://bugzilla.gnome.org/getting-traces.cgi">backtrace</a>. You will also want to check the <a href="http://xinehq.de/index.php/faq">xine FAQ</a>.</p>
 
 <h2>Totem bug</h2>
 <p>If you are convinced the problem is with Totem itself, you should first check the <a href="http://bugzilla.gnome.org/buglist.cgi?product=totem&amp;bug_status=NEW&amp;bug_status=REOPENED&amp;bug_status=ASSIGNED&amp;bug_status=UNCONFIRMED">bug list</a> if your
@@ -223,18 +227,18 @@ To have better debug-output, open a terminal and enter the following command.</p
 <h1>Links</h1>
 <p>Here you can find a collection of usefull links related to totem.</p>
 <ul>
-	<li><a href="http://gstreamer.freedesktop.org">GStreamer</a> homepage</li>
+  <li><a href="http://gstreamer.freedesktop.org">GStreamer</a> homepage</li>
   <li><a href="http://xinehq.de/">xine</a> homepage</li>
   <li><a href="http://ios.free.fr/?page=projet&amp;quoi=1">Goom</a>: the default visual plugin used in Totem</li>
 
   <li><a href="http://en.wikipedia.org/wiki/Totem_%28media_player%29">Totem</a> on Wikipedia</li>
   <li><a href="http://gnome-subtitles.sourceforge.net/">GNOME Subtitles</a>: a subtitle editor for GNOME</li>
-<!--  <li><a href="http://gsubedit.sourceforge.net/">GSubEdit</a>: a subtitle editor for Gnome</li> //-->
+<!--  <li><a href="http://gsubedit.sourceforge.net/">GSubEdit</a>: a subtitle editor for GNOME</li> //-->
 </ul>
 
 <!--
 <h1>Streams</h1>
-Here is a list of streams to test with totem. Some of these won't work. You've been warned.<br/>
+<p>Here is a list of streams to test with totem. Some of these won't work. You've been warned.</p>
 <ul>
 <li><a href="http://windowsmedia.com/">WindowsMedia.com</a>: 2 tons of mms streams, including music, trailers and radios.</li>
 <li><a href="http://www.apple.com/trailers/">Apple Trailers</a>: plenty of Quicktime streaming film trailers.</li>
@@ -247,7 +251,6 @@ Here is a list of streams to test with totem. Some of these won't work. You've b
 <li><a href="http://www.smother.net/sounds/index.php?ID=74">Smother.net</a>: plenty of Music videos.</li>
 <li><a href="http://www.winamp.com/videos/">Winamp</a>'s video section.</li>
 </ul>
-<p/>
 //-->
 
 <h1>Sponsors</h1>
@@ -264,7 +267,7 @@ Here is a list of streams to test with totem. Some of these won't work. You've b
 
 <div id="sidebar">
 	<p class="section">Downloads</p>
-	<p>The latest releases can always be found at the <a href="http://ftp.gnome.org/pub/GNOME/sources/totem">GNOME ftp site</a>.</p>
+	<p>The latest releases can always be found at the <a href="http://ftp.gnome.org/pub/GNOME/sources/totem">GNOME FTP site</a>.</p>
 	<br />
 
 	<p class="section">Feedback</p>
@@ -273,7 +276,7 @@ Here is a list of streams to test with totem. Some of these won't work. You've b
 </div>
 
 <div id="copyright">
-	Copyright &copy; 2005, 2006, <a href="http://www.gnome.org/">The GNOME Project</a><br />
+	Copyright &copy; 2005&ndash;2008, <a href="http://www.gnome.org/">The GNOME Project</a><br />
 	<a href="http://validator.w3.org/check/referer">Optimized</a>
 	for <a href="http://www.w3.org/">standards</a>.
 </div>
