@@ -1,3 +1,9 @@
+2008-04-14  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* index.html: Add information about the YouTube plugin, update some
+	information and fix some HTML errors. Additionally, update the
+	copyright dates. (Closes: #527189)
+
 2008-03-25  Bastien Nocera  <hadess@hadess.net>
 
 	* index.html: Fix typo
